@@ -1,5 +1,5 @@
 /* pixmaps.c: icon pixmaps
-   Copyright (c) 2003-2004 Fredrick Meunier, Philip Kendall
+   Copyright (c) 2003-2005 Fredrick Meunier, Philip Kendall, Darren Salt
 
    $Id$
 
@@ -294,3 +294,59 @@ char *gtkpixmap_tape_marker[] = {
 "...     ",
 "..      ",
 ".       "};
+
+char *gtkpixmap_mouse_inactive[] = {
+"14 21 4 1",
+"     c None",
+"#    c #6C6C6C",
+"+    c #A0A0A0",
+".    c #FFFFFF",
+"      ..      ",
+"      ..      ",
+" +####++####+ ",
+" #####++##### ",
+" ####++++#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ++++++++++++ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" +##########+ ",
+" +##########+ ",
+"  ++######++  "};
+
+char *gtkpixmap_mouse_active[] = {
+"14 21 4 1",
+"     c None",
+"#    c #0000D0",
+"+    c #6C6CD0",
+".    c #FFFFFF",
+"      ..      ",
+"      ..      ",
+" +####++####+ ",
+" #####++##### ",
+" ####++++#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ####+##+#### ",
+" ++++++++++++ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" ############ ",
+" +##########+ ",
+" +##########+ ",
+"  ++######++  "};
